--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </a>
                 </div>
                 <div class="product">
-                    <img src="./img/top-product1-1.jpg" alt="product" class="product__img">
+                    <img src="./img/top-product2.jpg" alt="product" class="product__img">
                     <div class="product__content">
                         <a href="product.html" class="product__heading">ELLERY X M'O CAPSULE</a>
                         <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
